# vulkan-renderer

./: .gitignore  CMakeLists.txt  README.md  build.sh  imgui.ini
assets/meshes/: sponza.mtl
assets/shaders/: CMakeLists.txt  shader_common.h  standard.frag  standard.vert
assets/textures/: gizmo.ppm  ppmify.sh  red.ppm
src/: camera.cpp  camera.h  cowtools.h  draw.cpp  draw.h  geometry.cpp  geometry.h  gizmos.cpp  gizmos.h  gui.cpp  gui.h  input.cpp  input.h  machines.cpp  machines.h  main.cpp  memory.cpp  shader.cpp  shader.h  textures.cpp  textures.h  timing.cpp  timing.h  transform.cpp  transform.h
src/core/: context.cpp  context.h  device.cpp  device.h  memory.cpp  memory.h  pipeline.cpp  pipeline.h  shader.cpp  swapchain.cpp  swapchain.h  textures.cpp  textures.h  vertices.cpp  vertices.h
src/geom/: geom_lib_2d.cpp  geom_lib_2d.h  makefile
src/geom/PGA/: multivector.h  pga.h  primitives.h
src/ppm/: ppm.cpp  ppm.h
